[package]
name = "genetic_algorithms"
description = "Library for solving genetic algorithm problems"
authors = ["Luis Eduardo Imbernón <imbernon@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/leimbernon/rust_genetic_algorithms.git"
keywords = ["genetics", "algorithm", "artificial_intelligence", "artificial", "intelligence", "ga"]
categories = ["emulators","development-tools", "science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = { version = "0.4", features = ["std", "serde"] }