[package]
name = "genetic_algorithms"
description = "Library for solving genetic algorithm problems"
authors = ["Luis Eduardo Imbernón <imbernon@gmail.com>"]
version = "0.9.1"
edition = "2021"
rust-version = "1.60"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/leimbernon/rust_genetic_algorithms.git"
homepage = "https://github.com/leimbernon/rust_genetic_algorithms.git"
documentation = "https://docs.rs/genetic_algorithms/latest/genetic_algorithms"
keywords = ["genetics", "algorithm", "ai", "artificial", "intelligence"]
categories = ["emulators","development-tools", "science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num_cpus = "1.15.0"
log = { version = "0.4", features = ["std", "serde"] }