[package]
name = "genetic_algorithms"
description = "Library for solving genetic algorithm problems"
authors = ["Luis Eduardo Imbernón <imbernon@gmail.com>"]
version = "1.6.0"
edition = "2021"
rust-version = "1.82.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/leimbernon/rust_genetic_algorithms.git"
homepage = "https://github.com/leimbernon/rust_genetic_algorithms.git"
documentation = "https://docs.rs/genetic_algorithms/latest/genetic_algorithms"
keywords = ["genetics", "algorithm", "ai", "artificial", "intelligence"]
categories = ["emulators","development-tools", "science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num_cpus = "1.15.0"
log = { version = "0.4.22", features = ["std", "serde", "kv_unstable"] }
env_logger = "0.11.5"

[dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[[bench]]
name = "selection"
harness = false